12383 : Project Overview Page: correct the alignment of three buttons which appear at end of each page

--- a/web/public/scss/_common.scss
+++ b/web/public/scss/_common.scss
@@ -355,11 +355,24 @@ button[type="button"] {
         }
         &:last-child {
             margin-right: 0;
+            @include xsScreen {
+                margin-left: 20px;
+                margin-right: 20px;
+            }
         }
         &:nth-child(2) {
             @include smsScreen {
                 margin-left: 0 !important;
             }
+            @include xsScreen {
+                margin-left: 20px !important;
+                margin-right: 20px;
+            }
+        }
+        @include xsScreen {
+            width: 100%;
+            margin-left: 20px;
+            margin-right: 20px;
         }
     }
 }
@@ -383,6 +396,11 @@ button[type="button"] {
             @include mdScreen {
                 margin-right: 8px;
             }
+        }
+        @include xsScreen {
+            width: 100%;
+            margin-left: 20px;
+            margin-right: 20px !important;
         }
     }
 }
